--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 	
 		<div class="centerleft">	
 		
-	<p> <a href="#"><img border="0" alt="logo" src="logo.png" width="90 px" height="90 px" align ="center">  </a> T.C.F VACATION RENTALS </p>
+	<p> <a href="https://cseonn9.github.io/Home/"><img border="0" alt="logo" src="logo.png" width="90 px" height="90 px" align ="center">  </a> T.C.F VACATION RENTALS </p>
 	
 		</div>
 
@@ -401,9 +401,9 @@
  		
   				<div class="btn-group-lg">
   		
-   			<a href="#" class="btn"> HOME </a>
-   			<a href="#" class="btn"> FLEET </a>
-    		<a href="#" class="btn"> CONTACT US </a>
+   			<a href="https://cseonn9.github.io/Home/" class="btn"> HOME </a>
+   			<a href="https://cseonn9.github.io/Fleet/" class="btn"> FLEET </a>
+    		<a href="https://cseonn9.github.io/ContactUs#" class="btn"> CONTACT US </a>
     
  				</div>
  		
